# stapp-template

./: .gitignore  README.md  pyproject.toml
assets/data/: temperature.csv
src/: main.py
src/components/: spiral_chart.py
src/pages/: 01_example_app.py  02_python_suppl_app.py  11_python_suppl_app.py  12_suppl_datavisual_app.py  13_suppl_page_layout.py
tests/: test_main.py  test_page_example_app.py  test_pages_example_app.py  test_pages_suppl_app.py
