[tool.poetry]
name = "stpyapp-template"
version = "0.1.0"
description = "streamlit project template for quick start"
authors = ["Shogo Ogami <sg.tao.so@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
taskipy = "^1.13.0"
flake8 = "^7.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "streamlit run src/main.py"
test = "pytest tests"
lint = "flake8 src"
format = "black src"
